--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meishijie",
+  "name": "meishijie-fe-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,19 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "axios": "^0.19.0",
+    "core-js": "^2.6.5",
     "element-ui": "^2.15.6",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "lodash": "^4.17.15",
+    "mockjs": "^1.0.1-beta3",
+    "throttle-debounce": "^2.1.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-template-compiler": "^2.6.10"
   }
 }
